--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
-<html lang="es">
-<Head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+<html lang="en"
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viemport" content="width=device-width, initial-scale=1.0"/>
+    <style>
+        img {width: 200px;}
+    </style>
 
-<title>primer repositorio</title>
+    <title>Mi perfil</title>
+    </head>
+
+
+<p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. A, id velit debitis libero facere dicta, suscipit odio reprehenderit aperiam quasi modi perferendis ut ea harum veritatis ipsa provident autem nesciunt!</p>
+    <body>
